--- a/math/post_approx_with_GP_emulators.bib
+++ b/math/post_approx_with_GP_emulators.bib
@@ -3,6 +3,24 @@
 % General Gaussian Processes (GPs)
 %  ---------------------------------------------------------------------------------------------------
 
+% Gaussian Processes for Machine Learning
+@Inbook{gpML,
+author="Rasmussen, Carl Edward",
+editor="Bousquet, Olivier
+and von Luxburg, Ulrike
+and R{\"a}tsch, Gunnar",
+title="Gaussian Processes in Machine Learning",
+bookTitle="Advanced Lectures on Machine Learning: ML Summer Schools 2003, Canberra, Australia, February 2 - 14, 2003, T{\"u}bingen, Germany, August 4 - 16, 2003, Revised Lectures",
+year="2004",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="63--71",
+abstract="We give a basic introduction to Gaussian Process regression models. We focus on understanding the role of the stochastic process and how it is used to define a distribution over functions. We present the simple equations for incorporating training data and examine how to learn the hyperparameters using the marginal likelihood. We explain the practical advantages of Gaussian Process and end with conclusions and a look at the current trends in GP work.",
+isbn="978-3-540-28650-9",
+doi="10.1007/978-3-540-28650-9_4",
+url="https://doi.org/10.1007/978-3-540-28650-9_4"
+}
+
 
 
 %  ---------------------------------------------------------------------------------------------------
