--- a/math/post_approx_with_GP_emulators.tex
+++ b/math/post_approx_with_GP_emulators.tex
@@ -113,43 +113,43 @@ as \textit{surrogates} or \textit{emulators}. The focus of the present work is o
 to derive emulators for the forward model or log-likelihood. 
 
 \subsection{Gaussian Processes}
-In this section, we provide a brief review of Gaussian processes; for in depth treatments, we refer readers to 
-(TODO: cite Gramacy, Stuart, Rasmussen and Williams). A \textit{Gaussian process} (GP) is a probability 
+In this section, we provide a brief review of Gaussian processes; for in-depth treatments, we refer readers to 
+\cite{gramacy2020surrogates, StuartTeck2, gpML}. A \textit{Gaussian process} (GP) is a probability 
 distribution over a set of functions $\func: \parSpace \to \R$, defined by the property that 
-he random vector $[\func(\Par_1), \dots, \func(\Par_\Ndesign)]^\top$ has
-a joint Gaussian distribution for any set of inputs $\parMat := [\Par_1, \dots, \Par_\Ndesign] \subset \parSpace$. 
-A GP is defined by its \textit{mean function} $\gpMean: \parSpace \to \R$ and positive-definite \textit{kernel} 
-(i.e., \textit{covariance function}) $\gpKer: \parSpace \times \parSpace \to \R$ and is thus denoted by 
-$\GP(\gpMean, \gpKer)$. Throughout this paper, we will vectorize notation as follows. Letting 
+the random vector $[\func(\Par_1), \dots, \func(\Par_\Ndesign)]^\top$ has
+a joint Gaussian distribution for any set of inputs $\parMat := \{\Par_1, \dots, \Par_\Ndesign\} \subset \parSpace$. 
+A GP is defined by its \textit{mean function} $\gpMeanPrior: \parSpace \to \R$ and positive-definite \textit{kernel} 
+(i.e., \textit{covariance function}) $\gpKerPrior: \parSpace \times \parSpace \to \R$ and is thus denoted by 
+$\GP(\gpMeanPrior, \gpKerPrior)$. Throughout this paper, we will vectorize notation as follows. Letting 
 $\tilde{\parMat} := [\tilde{\Par}_1, \dots, \tilde{\Par}_M]  \subset \parSpace$ be a second set of inputs, we define 
-$\func(\parMat) := [\func(\Par_1), \dots, \func(\Par_\Ndesign)]^\top \in \R^{\Ndesign}$ (and similarly for $\gpMean(\parMat)$), 
-$\gpKer(\parMat, \tilde{\parMat}) := \{\gpKer(\Par_{\idxDesign}, \tilde{\Par}_m)\}_{1 \leq \idxDesign, m \leq \Ndesign} \in \R^{\Ndesign \times M}$, 
-and $\gpKer(\parMat) := \gpKer(\parMat, \parMat) \in \R^{\Ndesign \times \Ndesign}$. Given this notation, 
+$\func(\parMat) := [\func(\Par_1), \dots, \func(\Par_\Ndesign)]^\top \in \R^{\Ndesign}$ (and similarly for $\gpMeanPrior(\parMat)$), 
+$\gpKerPrior(\parMat, \tilde{\parMat}) := \{\gpKerPrior(\Par_{\idxDesign}, \tilde{\Par}_m)\}_{1 \leq \idxDesign, m \leq \Ndesign} \in \R^{\Ndesign \times M}$, 
+and $\gpKerPrior(\parMat) := \gpKerPrior(\parMat, \parMat) \in \R^{\Ndesign \times \Ndesign}$. Given this notation, 
 the defining property of the GP can be written as 
 \begin{align}
-\func(\parMat) &\sim \Gaussian(\gpMean(\parMat), \gpKer(\parMat)).
+\func(\parMat) &\sim \Gaussian(\gpMeanPrior(\parMat), \gpKerPrior(\parMat)).
 \end{align}
 Now suppose that we have observed the (noiseless) function evaluations $\func(\designIn)$ at a set of \textit{design points} $\designIn$. 
-It is well-known (TODO: citations) that the conditional distribution $\func|\func(\designIn)$ is also a GP
+It is well-known \cite{gpML} that the conditional distribution $\func|\func(\designIn)$ is also a GP
 \begin{align}
-\funcEm[\Ndesign] := \func|\func(\designIn) \sim \GP(\gpMean[\Ndesign], \gpKer[\Ndesign])
+\funcEm[\Ndesign] := \func|\func(\designIn) \sim \GP(\gpMean[\Ndesign], \gpKer[\Ndesign]),
 \end{align}
 with mean and kernel given by 
 \begin{align}
-\gpMean[\Ndesign](\parMat) &= \gpMean(\parMat) + \gpKer(\parMat, \designIn) \gpKer(\designIn)^{-1} [\func(\designIn) - \gpMean(\designIn)] \label{kriging_eqns} \\
-\gpKer[\Ndesign](\parMat) &= \gpKer(\parMat) - \gpKer(\parMat, \designIn) \gpKer(\designIn)^{-1} \gpKer(\designIn, \parMat). \nonumber
+\gpMean[\Ndesign](\parMat) &= \gpMeanPrior(\parMat) + \gpKerPrior(\parMat, \designIn) \gpKerPrior(\designIn)^{-1} [\func(\designIn) - \gpMeanPrior(\designIn)] \label{kriging_eqns} \\
+\gpKer[\Ndesign](\parMat) &= \gpKerPrior(\parMat) - \gpKerPrior(\parMat, \designIn) \gpKerPrior(\designIn)^{-1} \gpKerPrior(\designIn, \parMat). \nonumber
 \end{align}
 The predictive mean can be seen to interpolate the design points (i.e., $\gpMean[\Ndesign](\designIn) = \func(\designIn)$), with 
 the predictive variance vanishing at these inputs (i.e., $\gpKer[\Ndesign](\designIn) = 0$). To break these interpolation properties,
-a constant can be added to the diagonal of the kernel matrix so that $(\gpKer(\designIn) + \nuggetSD^2 I)^{-1}$ replaces 
+a constant can be added to the diagonal of the kernel matrix so that $(\gpKerPrior(\designIn) + \nuggetSD^2 I)^{-1}$ replaces 
 $\gpKer(\designIn)^{-1}$ in \ref{kriging_eqns}. In the present context, the maps $\fwd$ and $\llik$ are assumed to be deterministic functions 
 of $\Par$ and hence the interpolation property is desirable. Nevertheless, a small, positive fixed constant $\nuggetSD^2$ is still 
 typically included for numerical stability. 
 
-Our default choice of kernel function is the popular \textit{exponentiated quadratic} 
-(also called \textit{squared exponential} or \textit{Gaussian}), which is given by 
+Our default choice of covariance function is the popular \textit{exponentiated quadratic} 
+(also called \textit{squared exponential} or \textit{Gaussian}) kernel, which is given by 
 \begin{align}
-\gpKer(\Par, \tilde{\Par}) &= 
+\gpKerPrior(\Par, \tilde{\Par}) &= 
 \margSD^2 \Exp{- \sum_{\idxParDim=1}^{\dimPar} \left(\frac{\Par_{\idxParDim} - \tilde{\Par}_{\idxParDim}}{\lengthscale_{\idxParDim}} \right)^2}, 
 \end{align}
 defined by the choice of positive hyperparameters $\margSD, \lengthscale_{1}, \dots, \lengthscale_{\dimPar}$. This is an example
@@ -160,8 +160,8 @@ at their maximum likelihood estimates.
 
 Finally, we consider the extension to multi-output functions $\func: \parSpace \to \R^{\dimObs}$. There is a large literature on multi-output 
 kernels (TODO: cite), but we focus here on the simplest case in which each output is modeled separately as an independent GP. 
-In this setting, the notation $\gpKer(\Par)$ is now interpreted as the $\dimObs \times \dimObs$ diagonal matrix collecting the variance of each 
-independent GP. Similarly, for a set of inputs $\parMat \in \R^{M \times \dimPar}$, $\gpKer[\Ndesign](\parMat)$ is now the 
+In this setting, the notation $\gpKerPrior(\Par)$ is now interpreted as the $\dimObs \times \dimObs$ diagonal matrix collecting the variance of each 
+independent GP. Similarly, for a set of inputs $\parMat \in \R^{M \times \dimPar}$, $\gpKerPrior(\parMat)$ is now the 
 $M\dimObs \times M\dimObs$ block diagonal matrix constructed from the predictive covariances of each independent GP. 
 
 \subsection{Surrogate Construction}
@@ -176,11 +176,11 @@ approximates $\fwd$ or $\llik$.
 
 \subsubsection{Forward Model Emulation}
 If the output dimension $\dimObs$ is reasonably small, then a common approach is to specify an independent 
-multi-output GP prior directly for the forward model, $\fwd \sim \GP(\emMean{\fwd}, \emKer{\fwd})$. After 
+multi-output GP prior directly for the forward model, $\fwd \sim \GP(\emMeanPrior{\fwd}, \emKerPrior{\fwd})$. After 
 conditioning on the design $\{(\Par_{\idxDesign}, \fwd(\Par_{\idxDesign}))\}_{\idxDesign=1}^{\Ndesign}$, 
 the predictive distribution $\fwdEm[\Ndesign] \sim \GP(\emMean[\Ndesign]{\fwd}, \emKer[\Ndesign]{\fwd})$ 
 represents the emulator for $\fwd$. We emphasize that $\fwdEm[\Ndesign]$ is a \textit{stochastic} surrogate; 
-the predicted forward model outputs at inputs $\parMat$ is summarized by the entire distribution 
+the model output predictions at inputs $\parMat$ are given by the entire distribution 
 $\fwdEm[\Ndesign](\parMat) \sim \Gaussian(\emMean[\Ndesign]{\fwd}(\parMat), \emKer[\Ndesign]{\fwd}(\parMat))$. 
 Thus, the mean $\emMean[\Ndesign]{\fwd}(\parMat)$ provides a point estimate while the covariance 
 $\emKer[\Ndesign]{\fwd}(\parMat)$ summarizes the uncertainty in the estimate. This is useful for the purpose
@@ -189,18 +189,18 @@ approximation can be propagated to the approximate posterior distribution. We no
 function $\fwdEm[\Ndesign]$ in place of $\fwd$ in the log-likelihood induces an approximation of the log-likelihood. 
 In the case of the additive Gaussian likelihood \ref{llik_Gaussian} this approximation takes the form 
 \begin{align}
-\llikEmFwd[\Ndesign](\Par) := \log\Gaussian(\obs| \fwdEm[\Ndesign](\Par), \likPar). \label{induced_llik_emulator}
+\llikEmFwd(\Par) := \llik(\Par; \fwdEm) =  \log\Gaussian(\obs| \fwdEm[\Ndesign](\Par), \likPar). \label{induced_llik_emulator}
 \end{align}
 We emphasize two facts: (i.) the induced log-likelihood approximation $\llikEmFwd[\Ndesign](\Par)$ is also 
-stochastic, but no longer Gaussian; and (ii.) $\llikEmFwd[\Ndesign]$ is a ``plug-in'' estimator for $\llik$; no 
-prior model for $\llik$ is specified. Instead, a modular approach \cite{modularization} is taken in which all of 
-the surrogate modeling decisions are made for $\fwd$, and then the resulting emulator $\fwdEm[\Ndesign]$ 
-is simply plugged into the likelihood. Emulating expensive models using GPs is one of the central questions 
+stochastic, but no longer Gaussian; and (ii.) no surrogate modeling is performed directly for $\llik$; instead, 
+the approximation $\llikEmFwd[\Ndesign](\Par) = \llik(\Par; \fwdEm[\Ndesign])$ is derived by ``plugging in'' the 
+forward model emulator. This represents a modular surrogate-modeling approach \cite{modularization}. 
+Emulating expensive models using GPs is one of the central questions 
 studied in the computer experiments literature; see \cite{gramacy2020surrogates} and 
 \cite{design_analysis_computer_experiments} for detailed treatments. Challenges arise when the output
 dimension $\dimObs$ is large or the outputs are highly interdependent, rendering the independent GP 
 approach infeasible or ill-advised. For example, the output may correspond to the numerical solution of 
-a differential equation and thus may take the form of a long time series or large spatiotemporal grid. 
+a differential equation and thus may take the form of a time series or spatiotemporal grid. 
 A great deal of literature has addressed these challenges, including approaches tailored to forward models
 with dynamical structure 
 (e.g., \cite{GP_dynamic_emulation, Bayesian_emulation_dynamic, Liu_West_dynamic_emulation, dynamic_nonlinear_simulators_GP}).
@@ -219,7 +219,8 @@ We observe in \ref{post_dens} that the forward model evaluations appear in the p
 likelihood. Thus, for the purposes of posterior inference, it is sufficient to directly approximate $\llik(\Par)$ without 
 obtaining an approximation of the forward model. It is typically preferable to focus on approximating the logarithm 
 of the likelihood, which usually results in a smoother response surface that is more amenable to GP emulation. 
-The emulator construction proceeds as before; a GP prior $\llik \sim \GP(\emMean{\llik}, \emKer{\llik})$ is specified and the predictive 
+The emulator construction proceeds as before; a GP prior $\llik \sim \GP(\emMeanPrior{\llik}, \emKerPrior{\llik})$ 
+is specified and the predictive 
 distribution $\llikEm[\Ndesign] \sim \GP(\emMean[\Ndesign]{\llik}, \emKer[\Ndesign]{\llik})$ obtained by 
 conditioning on the design $\{(\Par_{\idxDesign}, \llik(\Par_{\idxDesign}))\}_{\idxDesign=1}^{\Ndesign}$. 
 The use of GPs to approximate log-likelihoods has been widely used in approximate Bayesian inference 
@@ -244,32 +245,52 @@ typically non-Gaussian and will depend on the specific likelihood under consider
 $\llikEmGeneric[\Ndesign]$ as a stand-in for either $\llikEmFwd[\Ndesign]$ or $\llikEm[\Ndesign]$ when 
 stating results that apply to both settings. 
 
-Plugging the log-likelihood surrogate into the posterior density expression \ref{post_dens} yields 
+Plugging these log-likelihood surrogates into the posterior density expression \ref{post_dens} yields 
 
 \begin{align}
-\emApprox[\Ndesign]{\postDensNorm}(\Par) := \frac{1}{\emApprox[\Ndesign]{\normCst}}\emApprox[\Ndesign]{\postDens}(\Par) 
-:= \frac{1}{\emApprox[\Ndesign]{\normCst}} \priorDens(\Par) \Exp{\llikEmGeneric[\Ndesign](\Par)}, \label{post_dens_random}
+\fwdEmRdm[\Ndesign]{\postDensNorm}(\Par) 
+&:= \frac{1}{\fwdEmRdm[\Ndesign]{\normCst}} \fwdEmRdmDens[\Ndesign](\Par) 
+:=  \frac{1}{\fwdEmRdm[\Ndesign]{\normCst}} \priorDens(\Par) \Exp{\llikEmFwd[\Ndesign](\Par)} \label{post_dens_random_fwd} \\
+\llikEmRdm[\Ndesign]{\postDensNorm}(\Par) 
+&:= \frac{1}{\llikEmRdm[\Ndesign]{\normCst}} \llikEmRdmDens[\Ndesign](\Par) 
+:=  \frac{1}{\llikEmRdm[\Ndesign]{\normCst}} \priorDens(\Par) \Exp{\llikEm[\Ndesign](\Par)} \label{post_dens_random_llik},
 \end{align}
-with normalizing constant given by 
+with normalizing constants given by 
 \begin{align}
-\emApprox[\Ndesign]{\normCst} &= \int \priorDens(\Par) \Exp{\llikEmGeneric[\Ndesign](\Par)} d\Par. \label{norm_cst_random}
+\fwdEmRdm[\Ndesign]{\normCst}
+&= \int \priorDens(\Par) \Exp{\llikEmFwd[\Ndesign](\Par)} d\Par \label{norm_cst_random_fwd} \\
+\llikEmRdm[\Ndesign]{\normCst}
+&= \int \priorDens(\Par) \Exp{\llikEm[\Ndesign](\Par)} d\Par \label{norm_cst_random_llik}. 
 \end{align}
-The unnormalized posterior density $\emApprox[\Ndesign]{\postDens}$ is stochastic; each sample trajectory from the 
-underlying GP induces a different posterior. The papers \cite{StuartTeck1, StuartTeck2} refer to this as the \textit{sample-based}
-approximation of the posterior. Given that it is not obvious how to perform inference using this random object, one typically 
+The unnormalized posterior densities $\fwdEmRdmDens[\Ndesign]$ and $\llikEmRdmDens[\Ndesign]$ are stochastic; 
+each sample trajectory from the underlying GP induces a different posterior. 
+The papers \cite{StuartTeck1, StuartTeck2} refer to this as the \textit{sample-based}
+approximation of the posterior. Given that it is not obvious how to perform inference using these random objects, one typically 
 proceeds by choosing a single, deterministic posterior approximation that somehow summarizes the uncertainty in the 
-random posterior measure. The popular choices for such deterministic approximations are presented below. 
+random posterior measure. Popular choices for such deterministic approximations are described below. Going forward, 
+for succinctness we will only define the unnormalized posterior densities, the associated normalized being 
+implicitly defined. 
 
 \subsection{Deterministic Approximations}
-Arguably the simplest approach is to reduce the random emulator to a deterministic one by considering only the GP 
-predictive mean. The plug-in mean estimators yield posterior approximations with unnormalized densities 
+Arguably the simplest approach to constructing a deterministic approximation is to reduce the random emulator 
+to a deterministic one by considering only the GP predictive mean. 
+The plug-in mean estimators yield posterior approximations with unnormalized densities 
 \begin{align}
-\emPostDensMean[\Ndesign](\Par) &= \priorDens(\Par) \Exp{\emMean[\Ndesign]{\llik}(\Par)}
+\fwdEmMeanDens[\Ndesign](\Par) &:= \priorDens(\Par) \Exp{\llik(\Par; \emMean[\Ndesign]{\fwd}(\Par))} \label{post_dens_mean_fwd} \\
+\llikEmMeanDens[\Ndesign](\Par) &:= \priorDens(\Par) \Exp{\emMean[\Ndesign]{\llik}(\Par)} \label{post_dens_mean_llik}.
 \end{align}
-
-
-
-
+These approximations fail to account for the uncertainty introduced by the surrogate model. One approach to propagate the 
+emulator uncertainty is to marginalize the likelihood with respect to the emulator. Doing so yields the approximations 
+\begin{align}
+\fwdEmMargDens[\Ndesign](\Par) &:= \priorDens(\Par) \E_{\fwdEm}\left[\Exp{\llikEmFwd[\Ndesign](\Par)} \right] \label{post_dens_marg_fwd} \\
+\llikEmMargDens[\Ndesign](\Par) &:= \priorDens(\Par) \E_{\llikEm}\left[\Exp{\llikEm[\Ndesign](\Par)} \right] \label{post_dens_marg_llik}
+\end{align}
+The subscripts in the expectations indicate integration with respect to the GP predictive distributions 
+$\Gaussian(\emMean[\Ndesign]{\fwd}(\Par), \emKer[\Ndesign]{\fwd}(\Par))$ and
+$\Gaussian(\emMean[\Ndesign]{\llik}(\Par), \emKer[\Ndesign]{\llik}(\Par))$, respectively. Note that these expectations are 
+computed independently for each $\Par$; the GP predictive covariance structure is not considered. 
+The term \textit{marginal approximation} follows the references \cite{StuartTeck1, StuartTeck2}, which analyze the error of these
+approximations in the Gaussian likelihood setting. 
 
 
 \subsection{Deterministic Approximations}
