Progress on draft.

--- a/math/latex_macros_general.tex
+++ b/math/latex_macros_general.tex
@@ -2,6 +2,12 @@
 
 % Useful info on newcomand: https://tex.stackexchange.com/questions/117358/newcommand-argument-confusion
 
+% --------------------------------------------------------------------------------------------------
+% General commands.  
+% --------------------------------------------------------------------------------------------------
+
+\newcommand{\todo}{\textbf{TODO}}
+
 
 % --------------------------------------------------------------------------------------------------
 % General Math.  
@@ -37,4 +43,5 @@
 \newcommand{\Cov}{\mathrm{Cov}}
 \newcommand{\Prob}{\mathbb{P}}
 \newcommand{\Gaussian}{\mathcal{N}}
+\newcommand{\LN}{\text{LN}} % Log-normal distribution 
 
