Added short section on quantile posterior approximations.

--- a/math/latex_macros_gp_inv_prob.tex
+++ b/math/latex_macros_gp_inv_prob.tex
@@ -76,6 +76,15 @@
 \newcommand{\llikEmMeanDens}[1][\Ndesign]{\llikEmMean[#1]{\postDens}} 
 \newcommand{\fwdEmMeanDens}[1][\Ndesign]{\fwdEmMean[#1]{\postDens}} 
 
+% Quantile approximations. 
+\newcommand{\quantileProb}{\alpha}
+\newcommand{\GaussianCDF}{\Phi}
+\newcommand{\quantile}[1][\quantileProb]{q^{\quantileProb}}
+\newcommand{\llikEmQ}[2][\Ndesign]{{#2}_{#1}^{\quantileProb}}
+\newcommand{\fwdEmQ}[2][\Ndesign]{{#2}_{#1}^{\quantileProb}}
+\newcommand{\llikEmQDens}[1][\Ndesign]{\llikEmQ[#1]{\postDens}} 
+\newcommand{\fwdEmQDens}[1][\Ndesign]{\fwdEmQ[#1]{\postDens}} 
+
 
 \newcommand{\emPostDens}[1][]{\postDens_{#1}}
 \newcommand{\emApprox}[2][]{{#2}_{#1}}
