Progress on draft

--- a/math/latex_macros_gp_inv_prob.tex
+++ b/math/latex_macros_gp_inv_prob.tex
@@ -81,7 +81,7 @@
 \newcommand{\GaussianCDF}{\Phi}
 \newcommand{\quantile}[1][\quantileProb]{q^{\quantileProb}}
 \newcommand{\llikEmQ}[2][\Ndesign]{{#2}_{#1}^{\quantileProb}}
-\newcommand{\fwdEmQ}[2][\Ndesign]{{#2}_{#1}^{\quantileProb}}
+\newcommand{\fwdEmQ}[2][\Ndesign]{{#2}_{#1}^{\fwd, \quantileProb}}
 \newcommand{\llikEmQDens}[1][\Ndesign]{\llikEmQ[#1]{\postDens}} 
 \newcommand{\fwdEmQDens}[1][\Ndesign]{\fwdEmQ[#1]{\postDens}} 
 
