--- a/math/post_approx_with_GP_emulators.bib
+++ b/math/post_approx_with_GP_emulators.bib
@@ -23,7 +23,7 @@ url="https://doi.org/10.1007/978-3-540-28650-9_4"
 
 
 %  ---------------------------------------------------------------------------------------------------
-% General MCMC
+% MCMC
 %  ---------------------------------------------------------------------------------------------------
 
 % Pseudo-marginal. 
@@ -41,6 +41,35 @@ doi = {10.1214/07-AOS574},
 URL = {https://doi.org/10.1214/07-AOS574}
 }
 
+% Stability of Noisy Metropolis-Hastings
+@misc{stabilityNoisyMH,
+      title={Stability of Noisy Metropolis-Hastings}, 
+      author={Felipe J. Medina-Aguayo and Anthony Lee and Gareth O. Roberts},
+      year={2015},
+      eprint={1503.07066},
+      archivePrefix={arXiv},
+      primaryClass={stat.CO}
+}
+
+% Noisy Monte Carlo: approximate transition kernels
+@misc{noisyMCMC,
+      title={Noisy Monte Carlo: Convergence of Markov chains with approximate transition kernels}, 
+      author={P. Alquier and N. Friel and R. Everitt and A. Boland},
+      year={2014},
+      eprint={1403.5496},
+      archivePrefix={arXiv},
+      primaryClass={stat.ME}
+}
+
+% Survey of noisy Monte Carlo 
+@misc{noisyMCSurvey,
+      title={A survey of Monte Carlo methods for noisy and costly densities with application to reinforcement learning}, 
+      author={F. Llorente and L. Martino and J. Read and D. Delgado},
+      year={2021},
+      eprint={2108.00490},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
 
 
 %  ---------------------------------------------------------------------------------------------------
