--- a/math/post_approx_with_GP_emulators.tex
+++ b/math/post_approx_with_GP_emulators.tex
@@ -359,17 +359,31 @@ resulting in the $\quantileProb$-quantile, $\quantileProb \in (0,1)$ approximati
 The log-likelihood emulation case \ref{post_dens_quantile_llik} simplifies to 
 \begin{align}
 \llikEmQDens[\Ndesign](\Par) 
-&= \priorDens(\Par) \Exp{\emMean[\Ndesign]{\llik}(\Par) + \GaussianCDF^{-1}(\quantileProb) \sqrt{\emKer[\Ndesign]{\llik}(\Par)}},
-\label{post_dens_quantile_llik_simplified}
+&= \priorDens(\Par) \Exp{\emMean[\Ndesign]{\llik}(\Par) + \GaussianCDF^{-1}(\quantileProb) \sqrt{\emKer[\Ndesign]{\llik}(\Par)}} 
+\label{post_dens_quantile_llik_simplified} \\
+&= \llikEmMeanDens[\Ndesign](\Par) \Exp{\GaussianCDF^{-1}(\quantileProb) \sqrt{\emKer[\Ndesign]{\llik}(\Par)}},
+\label{post_dens_quantile_llik_var_inflation}
 \end{align}
 with $\GaussianCDF$ denoting the standard Gaussian distribution function. The approximate posterior 
 \ref{post_dens_quantile_llik_simplified} is considered in \cite{VehtariParallelGP, quantileApprox}. Larger choices 
 of $\alpha$ correspond to more conservative approximations in the sense of inducing a larger degree of posterior 
-inflation in regions where the GP is uncertain.  
+inflation in regions where the GP is uncertain. As compared with $\llikEmMeanDens[\Ndesign](\Par)$
+\ref{post_dens_marg_var_inflation}, we notice that the quantile approximation \ref{post_dens_quantile_llik_var_inflation}
+induces a ``softer'' form of uncertainty inflation, with the inflation factor scaling with the exponentiated GP standard 
+deviation instead of the variance. 
 
 \subsection{Noisy MCMC}
+We now interpret the approximate posteriors introduced in the previous section as inducing different 
+approximations of the Metropolis-Hastings (MH) acceptance probability. This perspective motivates 
+an alternative approach to GP-induced posterior approximation; instead of first deriving an 
+approximation of the unnormalized posterior density, we consider the approximation to the MCMC 
+scheme as the starting point. We consider a class of MCMC algorithms which produce 
+noisy approximations to the MH acceptance probability, and thus fall into the noisy MCMC 
+framework which has been considered in the literature 
+\cite{noisyMCMC, stabilityNoisyMH, noisyMCSurvey, pseudoMarginalMCMC}.  
 
-
+\subsubsection{Exact Metropolis-Hastings}
+We start by briefly reviewing the MH algorithm. 
 
 
 
